# pdf-processor

./: .gitignore  Dockerfile  README.md  pyproject.toml
input/: Thumbs.db
samples/: Thumbs.db
src/pdf_project/: __init__.py  classifier.py  extractor.py  generator.py  learner.py  learner_cli.py  main.py  models.py  ocr.py  parser.py  transformation.py  variation.py
tests/: test_main.py
